src/test/ui/issues/issue-11692-2.stderr
error: cannot find macro `test!` in this scope
  --> $DIR/issue-11692-2.rs:12:13
   |
LL |     concat!(test!());
   |             ^^^^

error: aborting due to previous error

